Create task and taskItem ui changes and empty methods

--- a/app/src/main/res/layout/fragment_create_task.xml
+++ b/app/src/main/res/layout/fragment_create_task.xml
@@ -21,6 +21,17 @@
         android:layout_height="match_parent"
         tools:context=".views.CreateTask">
 
+        <include
+            android:id="@+id/layout_progress_bar"
+            layout="@layout/progress_bar_layout"
+            android:layout_width="76dp"
+            android:layout_height="13dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/create_task_title"
             android:layout_width="276dp"
@@ -43,6 +54,7 @@
         <!--        android:layout_height="wrap_content"-->
         <!--        tools:layout_editor_absoluteX="30dp"-->
         <!--        tools:layout_editor_absoluteY="55dp" />-->
+
 
         <EditText
             android:id="@+id/edit_text_title"
@@ -97,38 +109,46 @@
 
         <Button
             android:id="@+id/add_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:text="@string/add_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_link"
-            app:layout_constraintVertical_bias="0.455" />
+            app:layout_constraintTop_toBottomOf="@+id/pick_date" />
 
-        <include
-            android:id="@+id/layout_progress_bar"
-            layout="@layout/progress_bar_layout"
-            android:layout_width="76dp"
-            android:layout_height="13dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <TextView
+            android:id="@+id/current_end_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/date"
+            app:layout_constraintBottom_toTopOf="@+id/add_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/pick_date" />
 
+        <Button
+            android:id="@+id/pick_date"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="204dp"
+            android:text="@string/end_date"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/save_task"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:layout_marginBottom="16dp"
             android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_image" />
+            app:layout_constraintTop_toBottomOf="@+id/add_image"
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
