--- a/app/src/main/res/layout/fragment_create_classroom.xml
+++ b/app/src/main/res/layout/fragment_create_classroom.xml
@@ -76,8 +76,8 @@
 
         <Button
             android:id="@+id/save_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:onClick="@{()->createClassroomViewModel.onSavePressed(editTextClassroomName.getText().toString(),editTextClassroomDescription.getText().toString() )}"
             android:text="@string/save"
             app:layout_constraintBottom_toTopOf="@+id/generated_link_text"
