--- a/app/src/main/res/layout/fragment_create_task.xml
+++ b/app/src/main/res/layout/fragment_create_task.xml
@@ -134,6 +134,7 @@
             android:layout_height="50dp"
             android:layout_marginBottom="204dp"
             android:text="@string/end_date"
+            android:onClick="@{()->createClassroomViewModel.onPressedDatePick()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
