--- a/app/src/main/res/layout/fragment_create_task.xml
+++ b/app/src/main/res/layout/fragment_create_task.xml
@@ -103,16 +103,20 @@
             android:inputType="textUri"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_text_description"
-            app:layout_constraintVertical_bias="0.16000003" />
+            app:layout_constraintVertical_bias="0.035" />
 
         <TextView
             android:id="@+id/current_end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="104dp"
             android:text="@string/date"
+            app:layout_constraintBottom_toTopOf="@+id/save_task"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pick_date" />
 
@@ -120,13 +124,15 @@
             android:id="@+id/pick_date"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:layout_marginBottom="204dp"
-            android:text="@string/end_date"
+            android:layout_marginBottom="244dp"
             android:onClick="@{()->createClassroomViewModel.onPressedDatePick()}"
+            android:text="@string/end_date"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/save_task"
