--- a/app/src/main/res/layout/list_item_exercise.xml
+++ b/app/src/main/res/layout/list_item_exercise.xml
@@ -24,12 +24,11 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:minHeight="100dp"
         app:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
