--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -105,6 +105,9 @@
         <argument
             android:name="classroomId"
             app:argType="string" />
+        <action
+            android:id="@+id/action_taskDetailsFragment_to_taskFragment"
+            app:destination="@id/taskFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
