--- a/app/src/main/res/layout/list_item_classroom.xml
+++ b/app/src/main/res/layout/list_item_classroom.xml
@@ -26,33 +26,32 @@
         android:layout_marginBottom="@dimen/mtrl_cards_spacing"
         android:clickable="true"
         android:focusable="true"
-        android:minHeight="100dp"
-        app:cardElevation="4dp"
         android:foreground="?android:attr/selectableItemBackground"
+        android:minHeight="120dp"
         android:onClick="@{() -> classroomClickListener.onClick(classroom)}"
-        >
+        app:cardElevation="4dp">
 
         <!-- Card contents. -->
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="135dp"
             android:orientation="vertical">
 
             <TextView
-
                 android:id="@+id/class_name"
                 style="@style/TextAppearance.MaterialComponents.Headline6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="17dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:maxLength="32"
                 android:text="@string/classname"
                 app:classroomName="@{classroom}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.023"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
@@ -62,46 +61,51 @@
                 style="@style/TextAppearance.MaterialComponents.Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="@string/owner_name"
                 app:classroomOwner="@{classroom}"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.967"
-                app:layout_constraintStart_toEndOf="@+id/class_name"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/classroom_description" />
+
+            <TextView
+                android:id="@+id/classroom_description"
+                setClassroomDescription="@{classroom}"
+                android:layout_width="369dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="NQBNGSXAVYUNJNEKCZVZKNXYSGROSCVVQSVUIFIFELJAYKQFZDAGGTEVBIXCKTWWVWBPWNDUNXOEBNWRUFDHZKVNYJRUXNFJLKVK"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/class_name"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/number_of_open_tasks"
+                style="@style/FirebaseUI.Text.T12"
+                setClassroomNumberOfTasks="@{classroom}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                style="@style/FirebaseUI.Text.T12"
                 android:text="@string/number_of_open_tasks"
-                setClassroomNumberOfTasks="@{classroom}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.961"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.915" />
-
-            <TextView
-                android:id="@+id/classroom_description"
-                setClassroomDescription="@{classroom}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.082"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.827" />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/owner_name"
+                app:layout_constraintTop_toBottomOf="@+id/classroom_description" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </com.google.android.material.card.MaterialCardView>
 
 </layout>
