--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -112,6 +112,7 @@
 
         <TextView
             android:visibility="gone"
+            android:padding="8dp"
             android:id="@+id/three_dots"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
