--- a/app/src/main/res/layout/list_item_finished_user.xml
+++ b/app/src/main/res/layout/list_item_finished_user.xml
@@ -65,6 +65,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.5"
                 android:width="0dp"
+                android:clickable="false"
                 userFinishedRadio="@{userFinished}"/>
 
 
