--- a/app/src/main/res/layout/list_item_finished_user.xml
+++ b/app/src/main/res/layout/list_item_finished_user.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="userFinished"
-            type="com.example.progresee.beans.UserFinished" />
+            type="com.example.progresee.beans.FinishedUser" />
 
     </data>
 
