Revert "refactor finishedUser methods"
This reverts commit 9c69945d6ee464cb521aa9948b56d15ed54e598a.

--- a/app/src/main/res/layout/list_item_finished_user.xml
+++ b/app/src/main/res/layout/list_item_finished_user.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="userFinished"
-            type="com.example.progresee.beans.FinishedUser" />
+            type="com.example.progresee.beans.UserFinished" />
 
     </data>
 
