--- a/app/src/main/res/layout/fragment_create_task.xml
+++ b/app/src/main/res/layout/fragment_create_task.xml
@@ -31,13 +31,6 @@
             app:layout_constraintTop_toBottomOf="@+id/add_link_task"
             tools:layout_editor_absoluteX="206dp" />
 
-        <!--    <DatePicker-->
-        <!--        android:id="@+id/end_date"-->
-        <!--        android:layout_width="wrap_content"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        tools:layout_editor_absoluteX="30dp"-->
-        <!--        tools:layout_editor_absoluteY="55dp" />-->
-
 
         <Button
             android:id="@+id/pick_date"
@@ -62,6 +55,7 @@
 
         <TextView
             android:id="@+id/current_end_date"
+            setCurrentDate="@{1}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/date_mock"
