--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -53,24 +53,24 @@
 
         <TextView
             android:id="@+id/full_name"
-            android:layout_width="92dp"
-            android:layout_height="21dp"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/full_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.317"
+            app:layout_constraintVertical_bias="0.0"
             app:setFullName="@{user}" />
 
         <TextView
             android:id="@+id/email"
-            android:layout_width="158dp"
+            android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="164dp"
@@ -78,23 +78,25 @@
             android:text="@string/email"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/full_name"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.95"
+            app:layout_constraintTop_toBottomOf="@+id/full_name"
+            app:layout_constraintVertical_bias="0.0"
             app:setEmail="@{user}" />
 
         <TextView
             android:id="@+id/last_login_date"
-            android:layout_width="143dp"
-            android:layout_height="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:text="@string/last_login_date"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.695"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/email"
-            app:layout_constraintTop_toBottomOf="@+id/full_name"
-            app:layout_constraintVertical_bias="0.8"
+            app:layout_constraintTop_toBottomOf="@+id/email"
             app:setLastLoggedIn="@{user}" />
 
         <TextView
