--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+
+    <item
+        android:id="@+id/refresh_classroom"
+        android:icon="@drawable/ic_refresh_24px"
+        android:title="@string/refresh"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/logout_menu_item"
         android:icon="@drawable/ic_exit_to_app_24px"
         android:title="@string/logout"
         app:showAsAction="always|withText" />
 
-    <item
-        android:id="@+id/setting_menu_item"
-        android:icon="@drawable/setting_24px"
-        android:title="@string/setting"
-        app:showAsAction="never" />
 </menu>
