--- a/app/src/main/res/layout/fragment_create_classroom.xml
+++ b/app/src/main/res/layout/fragment_create_classroom.xml
@@ -94,6 +94,7 @@
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/generated_link"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +108,7 @@
             android:text="@string/generated_classroom_invite_link"
             android:textColor="@android:color/black"
             android:textSize="16sp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
