--- a/app/src/main/res/menu/classroom_menu.xml
+++ b/app/src/main/res/menu/classroom_menu.xml
@@ -24,7 +24,7 @@
     <item
         android:id="@+id/add_user_menu_item"
         android:icon="@drawable/ic_person_add_24px"
-        android:title="@string/add_person"
+        android:title="@string/add_user"
         app:showAsAction="ifRoom" />
 
     <item
